0.43 2022-03-07
  [New Features]
    * Added the following methods in the Sys class.
      
      static method is_windows : int ();

      static method A : double ($file : string);

      static method C : double ($file : string);

      static method M : double ($file : string);

      static method O : int ($file : string);

      static method R : int ($file : string);

      static method S : int ($file : string);

      static method W : int ($file : string);

      static method X : int ($file : string);

      static method b : int ($file : string);

      static method c : int ($file : string);

      static method d : int ($file : string);

      static method e : int ($file : string);

      static method f : int ($file : string);

      static method g : int ($file : string);

      static method k : int ($file : string);

      static method l : int ($file : string);

      static method o : int ($file : string);

      static method p : int ($file : string);

      static method r : int ($file : string);

      static method s : long ($file : string);

      static method u : int ($file : string);

      static method w : int ($file : string);

      static method x : int ($file : string);

      static method z : int ($file : string);
      
      static method ioctl : int ($fd : int, $request : int, $request_arg = undef : object of Byte|Short|Int|Long|Float|Double|object);

      static method getuid : int ();

      static method geteuid : int ();

      static method getgid : int ();

      static method getegid : int ();

      static method setuid : int ($uid : int);

      static method seteuid : int ($euid : int);

      static method setgid : int ($gid : int);

      static method setegid : int ($egid : int);

      static method setpwent : void ();

      static method endpwent : void ();

      static method getpwent : Sys::User::Passwd ();

      static method setgrent : void ();

      static method endgrent : void ();
