@@ -125,40 +125,6 @@ int32_t SPVM__Sys__IO__Stat__lstat(SPVM_ENV* env, SPVM_VALUE* stack) {
   return 0;
 }
 
-int32_t SPVM__Sys__IO__Stat__fstat_raw(SPVM_ENV* env, SPVM_VALUE* stack) {
-
-  int32_t e = 0;
-  
-  int32_t fd = stack[0].ival;
-  
-  void* obj_stat = stack[1].oval;
-  
-  if (!obj_stat) {
-    return env->die(env, stack, "The $stat must be defined", __func__, FILE_NAME, __LINE__);
-  }
-  
-  struct stat* stat_buf = env->get_pointer(env, stack, obj_stat);
-  
-  int32_t status = fstat(fd, stat_buf);
-
-  stack[0].ival = status;
-  
-  return 0;
-}
-
-int32_t SPVM__Sys__IO__Stat__fstat(SPVM_ENV* env, SPVM_VALUE* stack) {
-  SPVM__Sys__IO__Stat__fstat_raw(env, stack);
-  
-  int32_t status = stack[0].ival;
-
-  if (status == -1) {
-    env->die(env, stack, "[System Error]fstat failed:%s", env->strerror(env, stack, errno, 0), __func__, FILE_NAME, __LINE__);
-    return SPVM_NATIVE_C_CLASS_ID_ERROR_SYSTEM;
-  }
-  
-  return 0;
-}
-
 int32_t SPVM__Sys__IO__Stat__st_dev(SPVM_ENV* env, SPVM_VALUE* stack) {
   
   void* obj_stat = stack[0].oval;
