@@ -40,10 +40,6 @@ class Sys::IO::Stat : pointer {
     return $stat;
   }
   
-  native static method fstat_raw : int ($fd : int, $stat : Sys::IO::Stat);
-  
-  native static method fstat : int ($fd : int, $stat : Sys::IO::Stat);
-  
   # Instance methods
   native method DESTROY : void ();
   native method st_dev : long ();
