@@ -17,14 +17,10 @@ my $start_memory_blocks_count = SPVM::get_memory_blocks_count();
 
 my $test_dir = "$FindBin::Bin";
 
+# Sys::IO::Stat->stat in SPVM is the same as MinGW stat function in Windows, not Perl.
+
 {
   ok(SPVM::TestCase::Sys::IO::Stat->stat("$test_dir"));
-  
-  my $stat_info = SPVM::TestCase::Sys::IO::Stat->stat_info("$test_dir");
-  my $stat_info_expected = [stat "$test_dir/ftest/readline_long_lines.txt"];
-  use Data::Dumper;
-  warn Dumper $stat_info->to_elems;
-  warn Dumper $stat_info_expected;
 
 =pod
 
@@ -46,27 +42,35 @@ my $test_dir = "$FindBin::Bin";
 
 =cut
   
-  my $stat_info_array = $stat_info->to_elems;
-  is($stat_info_array->[0], $stat_info_expected->[0], "stat[0]");
-  is($stat_info_array->[1], $stat_info_expected->[1], "stat[1]");
-  is($stat_info_array->[2], $stat_info_expected->[2], "stat[2]");
-  if ($^O eq 'MSWin32') {
-    warn("[Test Output]Output:$stat_info_array->[3], Expected(Perl Output):$stat_info_expected->[3] on Windows");
-  }
-  else {
-    is($stat_info_array->[3], $stat_info_expected->[3], "stat[3");
-  }
-  is($stat_info_array->[4], $stat_info_expected->[4], "stat[4]");
-  is($stat_info_array->[5], $stat_info_expected->[5], "stat[5]");
-  is($stat_info_array->[6], $stat_info_expected->[6], "stat[6]");
-  is($stat_info_array->[7], $stat_info_expected->[7], "stat[7]");
-  is($stat_info_array->[8], $stat_info_expected->[8], "stat[8]");
-  is($stat_info_array->[9], $stat_info_expected->[9], "stat[9]");
-  is($stat_info_array->[10], $stat_info_expected->[10], "stat[10]");
-  
-  unless ($^O eq 'MSWin32') {
-    is($stat_info_array->[11], $stat_info_expected->[11], "stat[11]");
-    is($stat_info_array->[12], $stat_info_expected->[12], "stat[12]");
+  {
+    my $stat_info = SPVM::TestCase::Sys::IO::Stat->stat_info("$test_dir");
+    my $stat_info_expected = [stat "$test_dir/ftest/readline_long_lines.txt"];
+    use Data::Dumper;
+    warn Dumper $stat_info->to_elems;
+    warn Dumper $stat_info_expected;
+    
+    my $stat_info_array = $stat_info->to_elems;
+    is($stat_info_array->[0], $stat_info_expected->[0], "stat[0]");
+    is($stat_info_array->[1], $stat_info_expected->[1], "stat[1]");
+    is($stat_info_array->[2], $stat_info_expected->[2], "stat[2]");
+    if ($^O eq 'MSWin32') {
+      warn("[Test Output]Output:$stat_info_array->[3], Expected(Perl Output):$stat_info_expected->[3] on Windows");
+    }
+    else {
+      is($stat_info_array->[3], $stat_info_expected->[3], "stat[3");
+    }
+    is($stat_info_array->[4], $stat_info_expected->[4], "stat[4]");
+    is($stat_info_array->[5], $stat_info_expected->[5], "stat[5]");
+    is($stat_info_array->[6], $stat_info_expected->[6], "stat[6]");
+    is($stat_info_array->[7], $stat_info_expected->[7], "stat[7]");
+    is($stat_info_array->[8], $stat_info_expected->[8], "stat[8]");
+    is($stat_info_array->[9], $stat_info_expected->[9], "stat[9]");
+    is($stat_info_array->[10], $stat_info_expected->[10], "stat[10]");
+    
+    unless ($^O eq 'MSWin32') {
+      is($stat_info_array->[11], $stat_info_expected->[11], "stat[11]");
+      is($stat_info_array->[12], $stat_info_expected->[12], "stat[12]");
+    }
   }
 }
 
@@ -80,47 +84,6 @@ unless ($^O eq 'MSWin32') {
   is_deeply($stat_info->to_elems, $stat_info_expected);
 }
 
-{
-  ok(SPVM::TestCase::Sys::IO::Stat->fstat("$test_dir"));
-  
-  my $stat_info = SPVM::TestCase::Sys::IO::Stat->fstat_info("$test_dir");
-  my $stat_info_expected = [stat "$test_dir/ftest/readline_long_lines.txt"];
-  warn Dumper $stat_info->to_elems;
-  warn Dumper $stat_info_expected;
-  
-  my $stat_info_array = $stat_info->to_elems;
-  if ($^O eq 'MSWin32') {
-    warn("[Test Output]Output:$stat_info_array->[0], Expected(Perl Output):$stat_info_expected->[0] on Windows");
-  }
-  else {
-    is($stat_info_array->[0], $stat_info_expected->[0], "stat[0]");
-  }
-  is($stat_info_array->[1], $stat_info_expected->[1], "stat[1]");
-  is($stat_info_array->[2], $stat_info_expected->[2], "stat[2]");
-  if ($^O eq 'MSWin32') {
-    warn("[Test Output]Output:$stat_info_array->[3], Expected(Perl Output):$stat_info_expected->[3] on Windows");
-  }
-  else {
-    is($stat_info_array->[3], $stat_info_expected->[3], "stat[3]");
-  }
-  is($stat_info_array->[4], $stat_info_expected->[4], "stat[4]");
-  is($stat_info_array->[5], $stat_info_expected->[5], "stat[5]");
-  if ($^O eq 'MSWin32') {
-    warn("[Test Output]Output:$stat_info_array->[6], Expected(Perl Output):$stat_info_expected->[6] on Windows");
-  }
-  else {
-    is($stat_info_array->[6], $stat_info_expected->[6], "stat[6]");
-  }
-  is($stat_info_array->[7], $stat_info_expected->[7], "stat[7]");
-  is($stat_info_array->[8], $stat_info_expected->[8], "stat[8]");
-  is($stat_info_array->[9], $stat_info_expected->[9], "stat[9]");
-  is($stat_info_array->[10], $stat_info_expected->[10], "stat[10]");
-  
-  unless ($^O eq 'MSWin32') {
-    is($stat_info_array->[11], $stat_info_expected->[11], "stat[11]");
-    is($stat_info_array->[12], $stat_info_expected->[12], "stat[12]");
-  }
-}
 
 SPVM::set_exception(undef);
 
